# dbt_super_store_sales

./: .gitignore  README.md  check_asset_mapping.py  dagster_cloud.yaml  dbt_project.yml  print_lineage.py  profiles.yml  requirements.txt
.github/workflows/: branch_deployments.yml  deploy.yml
dbt_super_store_sales/: pyproject.toml  setup.py
dbt_super_store_sales/dbt_super_store_sales/: assets.py  definitions.py  project.py  resources.py  schedules.py
dbt_super_store_sales/dbt_super_store_sales/defs/airbyte_ingest/: __init__.py  defs.yaml
dbt_super_store_sales/dbt_super_store_sales/defs/powerbi/: component.py  defs.yaml
macros/: cents_to_dollars.sql  clean_bom.sql  insert_employees.sql
models/marts/: dim_customers.sql  dim_product.sql  dim_region.sql  dim_shipping_status.sql  dim_subregion.sql  fct_orders.sql
models/staging/: schema.yml  stg_dim_customers.sql  stg_dim_product.sql  stg_dim_region.sql  stg_dim_shipping_status.sql  stg_dim_subregion.sql  stg_fct_orders.sql
models/staging/base/: base_orders.sql  base_people.sql  base_returns.sql  schema.yml  source.yml
powerbi/: Orders by Employee.te3pivot  Super Store Sales Data Model.te3diag  Super Store Sales.pbix  Super_Store_Sales_Schema_DWH_dbml.txt
seeds/: shipping_status.csv
tools/: inspect_defs.py
