[project]
name = "dbt_super_store_sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dagster-airbyte",
    "dbt-core<1.12",
    "dbt-snowflake<1.12",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dbt_super_store_sales.definitions"
code_location_name = "dbt_super_store_sales"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_super_store_sales"
